--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.21-alpine as builder
 
 WORKDIR /app
 
-COPY . .
+COPY . /app
 
 RUN go mod download && go mod tidy && go mod verify
 
@@ -11,6 +11,7 @@ RUN go build -v -o /app/binary ./cmd/main.go
 FROM alpine:3.14
 
 COPY --from=builder /app/binary /app/binary
+COPY --from=builder /app/.env.prod /app.env
 
 EXPOSE 8080
 ENTRYPOINT /app/binary
